[gd_scene load_steps=26 format=2]

[ext_resource path="res://SPRITES_GODOT/inimigoandar.png" type="Texture" id=1]
[ext_resource path="res://Patrolenemy.gd" type="Script" id=2]
[ext_resource path="res://SPRITES_GODOT/enemy_death_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://SPRITES_GODOT/inimigo hurt.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.8402, 18.5145 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 41, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 41, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 41, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 41, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 82, 41, 41 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 41, 82, 41, 41 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 41, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 41, 41, 41, 41 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 82, 41, 41 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 41, 82, 41, 41 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Enemy_Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "enemy_idle",
"speed": 1.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "enemy_hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "enemy_death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 6.89881, 7.13471 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 14.1172, 17.7324 )

[node name="Patrolenemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.563141, 7.40141 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.21, 1.21 )
frames = SubResource( 19 )
animation = "enemy_hurt"

[node name="Head" type="Area2D" parent="."]
position = Vector2( 0.5, -19.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( -0.240997, 2.92379 )
shape = SubResource( 20 )

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 0.623154, 8.12097 )
shape = SubResource( 21 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
